Fix a layout issue in the CharacterList component

--- a/src/components/CharacterList.scss
+++ b/src/components/CharacterList.scss
@@ -1,9 +1,9 @@
 .characters-container {
   display: grid;
   place-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 
-  gap: 2rem;
+  gap: 1rem;
   width: 100%;
 }
 
